# sandbox

./: .gitignore
C++/spdLoggerTest/: CMakeLists.txt  launchMultiple.py  test.cpp
C++_Qt/Designer/: ACTIONS.H  Actions.cpp  CMakeLists.txt  CommandItem.cpp  CommandItem.h  CommandListView.cpp  CommandListView.h  CommandModel.cpp  CommandModel.h  CommandTreeItem.cpp  CommandTreeItem.h  CommandTreeModel.cpp  CommandTreeModel.h  CommandTreeView.cpp  CommandTreeView.h  DesignerTestResources.qrc  ListWidget.cpp  ListWidget.h  ListWidgetView.cpp  ListWidgetView.h  MainWindow.cpp  MainWindow.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  TreeView.cpp  TreeView.h  main.cpp  ui_untitled.h  ui_untitled_v0.h  untitled.ui
C++_Qt/Designer/icons/: download.jfif
C++_Qt/QfileWrite/: CMakeLists.txt  main.cpp
C++_Qt/layout/: CMakeLists.txt
C++_Qt/libIGL/: CMakeLists.txt  main.cpp  p_(c) central canal, spinal cordmedulla.ply
C++_Qt/ofstream/: CMakeLists.txt  checkRegionNew.txt
C++_Qt/openCVTest/: CMakeLists.txt  main.cpp
C++_Qt/puzzleDragDrop/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  piecesModel.cpp  piecesModel.h  puzzle.qrc  puzzleWidget.cpp  puzzleWidget.h
C++_Qt/qStyleSheets/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
C++_Qt/visitor/: SConstruct
Eigen/: CMakeLists.txt  EigenTest.cpp
KeyLock/KeyLock_matlab/: convert16bit2time.m  converttime216bit.m  keylokdllproto.m  kfunc.m  testpourchecklaleasedate.m  unloadkeylok.m
KeyLock_matlab/: client.m  loadkeylok.m  rotate_16bit_left.m  test.m
PythonRmLayout/: rmLayout.py
Scons/: SConstruct  main.cpp
VERASONICS-machineID/: CMakeLists.txt  VANTAGE_SN.cpp  VeraAPI.cpp  VeraAPI.h  VeraAPI.hpp  main.cpp  makefile
VS2019_internal_error_update/: CMakeLists.txt  flags.h  main.cpp
VSProfiler/: test.cpp
cmake/: CMakeLists.txt  test.cpp
cmaketest/: CMakeLists.txt
cuda/: CMakeLists.txt  build.bat
dllCreation/: CMakeLists.txt  IconeusLicensing.cpp  IconeusLicensing.hpp  Keylok.cpp  main.cpp
layout/: Grid.cpp  Grid.h  main.cpp
libIGL/: p_(VS) ventricular systems.ply
makefiletest/: main.cpp  makefile
matlab/batchProcessingTool/: BankAccount.m  batchProcessing.mlapp  batchProcessing_edit.m  main.m
matlab/batchProcessingTool/@MyClass/: MyClass.m  myFunc.m
matlab/batchProcessingTool/@batchProcessing_edit2/: batchProcessing_edit2.m  createComponents.m
matlab/defaultFunctions/: getinput.m  myFunction.m
matlab_log_compression/: logCompression.m
ofstream/: checkRegionOld.txt  test.cpp
openCVTest/: make.bat
python/CubicBezier/: cBezier.py
python/Diagrams/: diagramsTest.py
python/SynologyAPI/: main.py  patch.diff  synology-api_client.py  synology_dsm_client.py  testFile.txt
python/SynologyAPI/testFolderFromLocal/: testFileFromLocal.txt
python/email/: myemail.py
python/installer/: myMain.py  setup.py
python/isinstance/: isinstance.py
python/launchMatlabCmd/: launchMatlab.py
python/pythonGetSubClasses/: subClasses.py
python/regexp/: regexp.py  viewer_small.app
pythonSingleton/: signleton.py
selfExtracting_autorun/: install.bat
visitor/: Item.cpp  Item.h  main.cpp
